--- a/packages/vc-agent/package.json
+++ b/packages/vc-agent/package.json
@@ -30,6 +30,8 @@
     "@veramo/did-manager": "^4.2.0",
     "@veramo/did-provider-key": "^4.2.0",
     "@veramo/did-resolver": "^4.2.0",
+    "@sphereon/ssi-sdk-ext.did-provider-key": "0.34.1-next.299",
+    "@sphereon/ssi-sdk-ext.did-resolver-key": "0.34.1-next.299",
     "@veramo/key-manager": "^4.2.0",
     "@veramo/kms-local": "^4.2.0",
     "@sphereon/did-auth-siop": "^0.19.0",
