--- a/packages/verifier-frontend/package.json
+++ b/packages/verifier-frontend/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.6.2",
     "qrcode.react": "^4.1.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
