--- a/packages/vc-agent/package.json
+++ b/packages/vc-agent/package.json
@@ -24,23 +24,25 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@digitalbazaar/vc-status-list": "^8.0.1",
+    "@sphereon/did-auth-siop": "^0.19.0",
+    "@sphereon/oid4vci-common": "^0.19.0",
+    "@sphereon/oid4vci-issuer": "^0.19.0",
+    "@sphereon/pex": "^3.3.0",
+    "@sphereon/ssi-sdk-ext.did-provider-key": "0.34.1-next.299",
+    "@sphereon/ssi-sdk-ext.did-resolver-key": "0.34.1-next.299",
+    "@sphereon/ssi-sdk.oid4vci-issuer": "^0.34.0",
+    "@sphereon/ssi-sdk.siopv2-oid4vp-rp-auth": "^0.34.0",
+    "@sphereon/ssi-types": "^0.29.0",
     "@veramo/core": "^4.2.0",
     "@veramo/credential-w3c": "^4.2.0",
     "@veramo/data-store": "^4.2.0",
     "@veramo/did-manager": "^4.2.0",
     "@veramo/did-provider-key": "^4.2.0",
     "@veramo/did-resolver": "^4.2.0",
-    "@sphereon/ssi-sdk-ext.did-provider-key": "0.34.1-next.299",
-    "@sphereon/ssi-sdk-ext.did-resolver-key": "0.34.1-next.299",
     "@veramo/key-manager": "^4.2.0",
     "@veramo/kms-local": "^4.2.0",
-    "@sphereon/did-auth-siop": "^0.19.0",
-    "@sphereon/oid4vci-common": "^0.19.0",
-    "@sphereon/oid4vci-issuer": "^0.19.0",
-    "@sphereon/pex": "^3.3.0",
-    "@sphereon/ssi-sdk.oid4vci-issuer": "^0.34.0",
-    "@sphereon/ssi-sdk.siopv2-oid4vp-rp-auth": "^0.34.0",
-    "@sphereon/ssi-types": "^0.29.0",
+    "axios": "^1.13.2",
     "did-resolver": "^4.1.0",
     "uuid": "^9.0.0"
   },
